fix: new url for my linkden

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@
       <ul class="submenu">
         <li><a href="https://www.facebook.com/bruno.gustavoluislima/">Facebook</a></li>
         <li><a href="https://www.instagram.com/burno.lima/">Instagram</a></li>
-        <li><a href="www.linkedin.com/in/bruno-lima-4415b121a">Linkedin</a></li>
+        <li><a href="https://www.linkedin.com/in/bruno-lima-4415b121a">Linkedin</a></li>
       </ul>
     </li>
   </ul>
