new template for homepage

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,69 +1,12 @@
 ---
 ---
-<nav class="menu">
-  <ul>
-    <li><a href="#">Bruno Lima</a></li>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Sobre</a></li>
-    <li class="dropdown">
-      <a href="#">Networks</a>
-      <ul class="submenu">
-        <li><a href="https://www.facebook.com/bruno.gustavoluislima/">Facebook</a></li>
-        <li><a href="https://www.instagram.com/burno.lima/">Instagram</a></li>
-        <li><a href="https://www.linkedin.com/in/bruno-lima-4415b121a">Linkedin</a></li>
-      </ul>
-    </li>
-  </ul>
-</nav>
-
-<style>
-.menu ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.menu ul li {
-  display: inline;
-  margin-right: 20px;
-}
-
-.menu ul li:last-child {
-  margin-right: 0;
-}
-
-.menu ul li a {
-  color: white;
-  text-decoration: none;
-  padding: 10px;
-}
-
-/* Estilos para o submenu */
-.menu .submenu {
-  display: none;
-  position: absolute;
-  background-color: #333;
-  padding: 0;
-  margin-top: 5px;
-  left: 0;
-  top: 100%;
-}
-
-.menu .dropdown:hover .submenu {
-  display: block;
-}
-
-.menu .dropdown {
-  position: relative;
-}
-
-.menu .submenu li {
-  display: block;
-  margin: 0;
-  padding: 10px;
-}
-
-.menu .submenu li a {
-  color: white;
-  text-decoration: none;
-}
-</style>
+<div class="navbar">
+    <div class="navbar__title">
+        Bruno Lima
+    </div>
+    <div class="navbar__menu">
+        <a href="/works/">Works</a>
+        <a href="/posts/">Posts</a>
+        <a href="https://github.com/burno-lima" target="_blank">GitHub</a>
+    </div>
+</div>
