--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,53 +1,27 @@
 ---
-import Navbar from '../components/Navbar.astro';
-interface Props {
-	title: string;
-}
+import '../styles/global.css';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { fade } from 'astro:transitions';
+const { pageTitle } = Astro.props;
 
-const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html transition:animate="none" lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-    <Navbar />
-		<slot />
+        <Header />
+        <main transition:animate={fade({ duration: '0.2s'})}>
+            <slot />
+            <Footer />
+        </main>
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
