--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-  <h1>Hello Wolrd</h1>
+<Layout title="Home">
+  <h1>HomePage Burno</h1>
 </Layout>
 
