new components, layout, post in blog

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,10 @@ const { pageTitle } = Astro.props;
         <Header />
         <main transition:animate={fade({ duration: '0.2s'})}>
             <slot />
-            <Footer />
         </main>
+        <Footer />
+        <script>
+        import "../scripts/menu.js";
+        </script>
 	</body>
 </html>
