--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,11 @@
 ---
+import Social from "./Social.astro";
+
 const year = new Date().getFullYear();
 ---
 <footer>
-    <div class="center">
-        <ul class="footer">
-            <li class="icon__btn"><a class="icon__link" href="https://www.facebook.com/bruno.gustavoluislima/" target="_blank"><span class="facebook-icon">Facebook</span></a></li>
-            <li class="icon__btn"><a class="icon__link" href="https://www.instagram.com/burno.lima/"><span class="instagram-icon">Instagram</span></a></li>
-            <li class="icon__btn"><a class="icon__link" href="https://www.linkedin.com/in/bruno-lima-4415b121a" target="_blank"><span class="linked-in">LinkedIn</span></a></li>
-        </ul>
-        <small>&copy; {year} <a class="footer__link" href="https://github.com/burno-lima">Bruno Lima</a>. All Rights Reserved.</small>
-    </div>
+    <Social platform="facebook" username="bruno.gustavoluislima" />
+    <Social platform="instagram" username="burno.lima" />
+    <Social platform="linkedin" username="in/bruno-lima-4415b121a" />
+    <small>&copy; {year} <a href="https://github.com/burno-lima">Bruno Lima</a></small>
 </footer>
