--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,11 @@
 ---
-import Navbar from "./Navbar.astro"
+import Navigation from "./Navigation.astro"
+import Hamburguer from './Hamburguer.astro';
+
 ---
 <header>
     <nav transition:persist>
-        <Navbar />
+        <Hamburguer />
+        <Navigation />
     </nav>
 </header>
