--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
-<Layout title="Home">
-  <h1>HomePage Burno</h1>
-</Layout>
+<BaseLayout pageTitle="Home">
+  <h1>My Blog</h1>
+</BaseLayout>
 
