--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout pageTitle="Home">
-  <h1>My Blog</h1>
+  <h1>Bruno Lima</h1>
 </BaseLayout>
 
