--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,6 +7,7 @@
         <!-- <p>Bruno Lima</p> -->
         <a href="/">Works</a>
         <a href="/blog/">Blog</a>
+        <a href="/tags/">Tags</a>
         <a href="https://github.com/burno-lima" target="_blank">GitHub</a>
     </div>
 </div>
