--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,3 +38,17 @@ h1 {
     display: none;
   }
 }
+
+/*footer*/
+.center {
+  text-align: center;
+}
+
+.footer {
+  margin: 2rem 0;
+}
+
+.footer_btn {
+  display: inline-block;
+  padding: 0 0.5rem;
+}
